[package]
name = "leetcode_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
surf = "2.3.2"
futures = { version = "0.3.30", features = ["thread-pool"] }
tokio = { version = "1.37.0", features = ["full"] }
